[package]
name = "rustsnipoor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
solana-client = "1.18.8"
solana-sdk = "1.18.8"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
url = "2.5.0"
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
reqwest = "0.11"
chrono = "0.4"
bincode = "1.3.3"

jupiter-swap-api-client = { path = "../jupiter-api/jupiter-swap-api-client" }